# mutual_fund_cyclicality_analysis

./: README.md  main.py  mutual_fund_data.csv  mutual_fund_nav_history.parquet  pyproject.toml  pytest.ini  requirements.txt
configs/: default.yaml  default.yml
data/: mutual_fund_nav_history.parquet
mf_analysis/: backtest.py  config.py  logging_utils.py  pipeline.py
src/common/: __init__.py  data_ingestion.py
src/cyclicality/: __init__.py  pipeline.py
src/cyclicity/: __init__.py  backtest.py  bottom_signal.py  detrend.py  harmonic.py  hilbert_cycle.py  io.py  report.py  scoring.py  spectrum.py  state_space.py  turning_points.py  utils.py
src/mf_analysis/: __init__.py  backtest.py  config.py  pipeline.py
src/simple_cyclicity/: __init__.py
tests/: conftest.py  test_backtest.py  test_integration.py  test_logging_setup.py  test_pipeline.py
