[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutual-fund-cyclicality-analysis"
version = "0.1.0"
description = "Mutual fund cyclicality analysis and backtesting CLI."
readme = "README.md"
authors = [{ name = "Tharun" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scipy==1.13.1",
    "statsmodels==0.14.2",
    "pyyaml==6.0.2",
    "pyarrow==17.0.0",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "scikit-learn==1.3.2",
    "rich==13.7.1",
    "tqdm==4.66.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["mf_analysis", "cyclicity", "simple_cyclicity"]

[tool.uv]
dev-dependencies = ["pytest>=8.0"]
